Fix scroll bar overlap with playback bar

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -17,7 +17,7 @@
 
 .above-playback {
   display: flex;
-  height: 95vh;
+  height: calc(100vh - 90px);
   overflow: scroll;
 }
 
